--- a/#src/index.html
+++ b/#src/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Document</title>
 </head>
 <body>
 	@@include('_header.html')
 	<main class="main">
-
+		<img src="img/img.jpg" alt="">
 	</main>
+	<script src="js/script.min.js"></script>
 </body>
 </html>
