--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,4 +1,35 @@
-<header class="header">
-	<h1>Шапка сайта</h1>
-	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur eos sunt, saepe facere temporibus doloremque ducimus explicabo nobis, incidunt deleniti exercitationem accusamus voluptatum vitae nisi impedit necessitatibus tempore quos magni.</p>
-</header>
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+			<div class="container">
+				<a class="navbar-brand" href="#">
+					<img src="img/logo.png" alt="">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+			
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contacts</a>
+					</li>
+				</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+				</form>
+			</div>
+		</div>
+		</nav>
+
+		<header class="header d-flex flex-column justify-content-center align-items-center">
+			<div class="container">
+				<h1 class="display-3">Сборка bootstrap and Gulp 4!</h1>
+				<p class="lead">Для быстрой и качественной верстки сайтов. Основано на открытых источниках и личном опыте!</p>
+			</div>
+		</header>
